Chapter 3 : Functions and Packages

--- a/Python/Introduction to Python/takeaways.ipynb
+++ b/Python/Introduction to Python/takeaways.ipynb
@@ -40,14 +40,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- get help: `?func_name`\n",
+    "- get help: `help(func_name)`\n",
+    "- methods: function that belong to objects\n",
+    "- packages :\n",
+    "    - directory of python scripts\n",
+    "    - each script is a module. Modules contain functions, methods, new python types (or objects) etc\n",
+    "    - eg: numpy, matplotlib etc\n",
+    "    - install packages with command: `pip install package_name`\n",
+    "    - import package: `import package_name`"
+   ]
   }
  ],
  "metadata": {
