--- a/Python/Introduction to Python/takeaways.ipynb
+++ b/Python/Introduction to Python/takeaways.ipynb
@@ -56,7 +56,32 @@
     "    - each script is a module. Modules contain functions, methods, new python types (or objects) etc\n",
     "    - eg: numpy, matplotlib etc\n",
     "    - install packages with command: `pip install package_name`\n",
-    "    - import package: `import package_name`"
+    "    - import package: `import package_name`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- numpy array:\n",
+    "    - contains only one type (homogeneous)\n",
+    "    - all elements acts as a single element while doing mathematical operations (broadcasting)\n",
+    "    - used for subsetting/ filtering\n",
+    "    - Faster mathematial operation (due to broadcasting)\n",
+    "- broadcasting: `some_array > 50`\n",
+    "- filtering: `x[x > 40]`\n",
+    "- see shape (this is an attribute, not a method): `some_array.shape`\n",
+    "- 2d numpy array : \n",
+    "    - array that's like a list of lists\n",
+    "    - indexing: `some_array[row][column]` or `some_array[row,column]`\n",
+    "    - subsetting : `some_array[row1:row_n][column1:column_n]` or `some_array[row1:row_n,column1:column_n]`"
    ]
   }
  ],
