Chapter 3 : Logic, Control Flow and Filtering

--- a/Python/Intermediate Python/takeaways.ipynb
+++ b/Python/Intermediate Python/takeaways.ipynb
@@ -70,7 +70,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Compare each element of numpy array with a variable : `np_array > 5`\n",
+    "- Compare 2 numpy arrays : `np_array1 > np_array2`\n",
+    "- test if same shape, same elements values : `np.array_equal(A,B)`  \n",
+    "- test if broadcastable shape, same elements values: `np.array_equiv(A,B)  `\n",
+    "- test if same shape, elements have close enough values: `np.allclose(A,B,...) `\n",
+    "- and operation in numpy: `np.logical_and(np_array1,np_array2)`\n",
+    "- or operation in numpy: `np.logical_or(np_array1,np_array2)`\n",
+    "- not operation in numpy: `np.logical_not(np_array1)`\n",
+    "- numpy operations works same on pandas series and sometimes on dataframe as well\n"
+   ]
   }
  ],
  "metadata": {
