--- a/Python/Intermediate Python/takeaways.ipynb
+++ b/Python/Intermediate Python/takeaways.ipynb
@@ -88,6 +88,50 @@
     "- not operation in numpy: `np.logical_not(np_array1)`\n",
     "- numpy operations works same on pandas series and sometimes on dataframe as well\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- index with for loop:\n",
+    "```\n",
+    "for index,val in enumerate(some_list):\n",
+    "    print(f\"Index is {index} and value is {val}\")\n",
+    "```\n",
+    "- looping on dictionary\n",
+    "```\n",
+    "for key, value in some_dict.items():\n",
+    "\tprint(key)\n",
+    "\tprint(value)\n",
+    "```\n",
+    "- looping on numpy array\n",
+    "```\n",
+    "for value in np.nditer(np_array): # Iterate over each element\n",
+    "\tprint(value) \n",
+    "# output 1 2 3 4 5 6\n",
+    "\n",
+    "for value in np_array: # Iterate over each dimension\n",
+    "    print(value) \n",
+    "# output\n",
+    "# [1 2 3]\n",
+    "# [4 5 6]\n",
+    "```\n",
+    "- looping on dataframe\n",
+    "```\n",
+    "for index, row in df.iterrows():\n",
+    "    print(index)\n",
+    "    print(row[\"col_name\"]) # print the row's col_name column's value\n",
+    "    df.loc[index,\"new_col\"] = row[\"some_col\"].upper() # Create new column in each iteration of rows\n",
+    "``` \n",
+    "- Using apply method for each row iteration: `df[\"new_column\"] = df[\"column_name\"].apply(lambda x:x+3)`"
+   ]
   }
  ],
  "metadata": {
