Chapter 5 : Case Study - Hacker Statistics

--- a/Python/Intermediate Python/takeaways.ipynb
+++ b/Python/Intermediate Python/takeaways.ipynb
@@ -132,6 +132,22 @@
     "``` \n",
     "- Using apply method for each row iteration: `df[\"new_column\"] = df[\"column_name\"].apply(lambda x:x+3)`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Random integer between 1 and 6 : `print(np.random.randint(1,7)) `\n",
+    "- Random float : `print(np.random.rand())` \n",
+    "- transpose array to make columns into rows and rows into columns : `np.transpose(np.array(some_list))`"
+   ]
   }
  ],
  "metadata": {
