Chapter 2 : Aggregating DataFrames

--- a/Python/Data Manipulation with pandas/takeaways.ipynb
+++ b/Python/Data Manipulation with pandas/takeaways.ipynb
@@ -27,11 +27,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Summary statistics of a column:\n",
+    "    - `df[\"col\"].mean()`\n",
+    "    - `df[\"col\"].min()`\n",
+    "- cumulative sum : `df['cum_col'] = df[\"col\"].cumsum()`\n",
+    "    - Others are `cummin()`, `cummax()`, `cumprod()`\n",
+    "- Drop duplicate : `df = df.drop_duplicates(subset = [\"column\", \"column2\"])`\n",
+    "- Count categorical values in a column: `df['col'].value_counts(ascending=True,normalize=True)`\n",
+    "- Grouping and aggregating : `df.groupby([\"col1\",\"col2\"])[\"another_col\"].agg([min,max,sum])`\n",
+    "- custom summmary on dataframe column:\n",
+    "```\n",
+    "def custom_func1(column):\n",
+    "    return column.quantile(0.3)\n",
+    "\n",
+    "def custom_func2(column):\n",
+    "    return column.quantile(0.4)\n",
+    "df[[\"col1\",\"col2\"]].agg([custom_func1, custom_func2])\n",
+    "```\n",
+    "- pivot table on dataframe:\n",
+    "```\n",
+    "df.pivot_table(index='cat_col_as_row_number', \n",
+    "               columns='cat_col_as_columns', \n",
+    "               values='num_col_as_values',\n",
+    "               fill_value = 0,\n",
+    "               margins = True,\n",
+    "               aggfunc=[np.mean,np.median])\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
