Chapter 3 : Slicing and Indexing DataFrames

--- a/Python/Data Manipulation with pandas/takeaways.ipynb
+++ b/Python/Data Manipulation with pandas/takeaways.ipynb
@@ -64,6 +64,46 @@
     "               aggfunc=[np.mean,np.median])\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Setting a column as index: `df.set_index(['col1','col2'])`\n",
+    "- Removing index: `df.reset_index()`\n",
+    "- Sorting with index: `df.sort_index(level=['col1','col2'], ascending = [True, False])`\n",
+    "- Discard index: `df.reset_index(drop=True)`\n",
+    "- Searching with filtering: `df[df['col'].isin(['val1','val2'])]`\n",
+    "- Searching with indexing: `df.loc[['val1','val2']]` # For simple index\n",
+    "- Searching with indexing: `df.loc[[('col1val1','col2val1'), ('col1val2','col2val2')]]` # Multi-level index\n",
+    "- Multi-level index slicing: \n",
+    "    1. `df.sort_index(level=['col1','col2'], ascending = [True, False])`\n",
+    "    2. `df.loc[('col1val1','col2val1') : ('col1val2','col2val2')]`\n",
+    "- Slicing with date index: `df.loc['2010-08-01' : '2011-02-28',:]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Extract month information : `dataframe[\"column\"].dt.month`\n",
+    "- Extract year information : `dataframe[\"column\"].dt.year`\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
