Chapter 4 : Creating and Visualizing DataFrames

--- a/Python/Data Manipulation with pandas/takeaways.ipynb
+++ b/Python/Data Manipulation with pandas/takeaways.ipynb
@@ -100,9 +100,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- import csv : `df = =pd.read_csv('filename.csv')`\n",
+    "- export csv : `df.to_csv('filename.csv', index = False, encoding='utf-8') # False: not include index`\n",
     "- Extract month information : `dataframe[\"column\"].dt.month`\n",
     "- Extract year information : `dataframe[\"column\"].dt.year`\n",
-    "- "
+    "- Detect Missing values:\n",
+    "    1. In any column : `df.isna().any()`\n",
+    "    2. Total missing entries : `df.isna().sum()`\n",
+    "- Read pickle file: `pd.read_pickle(\"dataset/filename.pkl\")`\n",
+    "- barplot : `df.plot(kind=\"bar\")`\n",
+    "- line plot : `df.plot(x=\"col1\", y=\"col2\")`\n",
+    "- scatter plot : `df.plot(x=\"col1\", y=\"col2\", kind=\"scatter\", title = \"Some Title\")`\n",
+    "- Dictionary to Dataframe:\n",
+    "    1. `df1 = pd.DataFrame(list_of_dictionary)`\n",
+    "    2. `df2 = pd.DataFrame(dict_of_list)`\n",
+    "- overlapping histogram : \n",
+    "```\n",
+    "# Overlapping histogram\n",
+    "df[df[\"type\"] == \"conventional\"][\"avg_price\"].hist(alpha=0.5, bins=20)\n",
+    "df[df[\"type\"] == \"organic\"][\"avg_price\"].hist(alpha=0.5, bins=20)\n",
+    "plt.legend([\"conventional\", \"organic\"])\n",
+    "plt.show()\n",
+    "```"
    ]
   }
  ],
