Chapter 4 : Merging Ordered and Time-Series Data

--- a/Python/Joining Data with pandas/takeaways.ipynb
+++ b/Python/Joining Data with pandas/takeaways.ipynb
@@ -151,6 +151,97 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Outer join by Default \n",
+    "- Result dataframe is ordered according to the \"on\" column\n",
+    "- Used in ordered data like time series\n",
+    "```\n",
+    "merged_df = pd.merge_ordered(left_df, right_df, on='date',\n",
+    "suffixes=('_left','_right'),\n",
+    "fill_method='ffill')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Merged Ordered on Left join\n",
+    "- Joined on nearest value as key\n",
+    "- key column(s) [the column used to match on] must be sorted\n",
+    "- used for nearest value sampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "merged_df = pd.merge_asof(left_df, right_df, on=['date'],\n",
+    "    suffixes=('_left','_right'),\n",
+    "    direction='nearest')\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- using list comprehension on dataframe column:\n",
+    "    - `['X' if val=='some_val' else 'Y' for val in df['col']]`\n",
+    "- querying a dataframe : `df.query('col1==\"A\" or (col2==\"B\" and col3 < 90)')`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unpivoting From wide table to long table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "unpivot_df = df.melt(id_vars=['col1_to_keep','col2_to_keep'],\n",
+    "            value_vars=['col3_to_unpivot','col4_to_unpivot'],\n",
+    "            var_name=['variable_col'], value_name='value_col')\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
