Chapter 3 : Quantitative comparisons and statistical visualizations

--- a/Python/Introduction to Data Visualization with Matplotlib/takeaways.ipynb
+++ b/Python/Introduction to Data Visualization with Matplotlib/takeaways.ipynb
@@ -88,6 +88,157 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bar plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots \n",
+    "# Create Bar plot\n",
+    "ax.bar(df.index, df[\"col1\"], label=\"col1\") \n",
+    "# Create stacked bar plot keeping the previous barplot below\n",
+    "ax.bar(df.index, df[\"col2\"], bottom=df[\"col1\"], label=\"col2\") \n",
+    "# Create stacked bar plot keeping the previous barplot below\n",
+    "ax.bar(df.index, df[\"col3\"], bottom=df[\"col1\"] + df[\"col2\"], label=\"col3\") \n",
+    "# Rotate tick x axis labels to 90 degree\n",
+    "ax.set_xticklabels(df.index, rotation=90) \n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "# Show legend\n",
+    "ax.legend() \n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histogram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- shows distribution of a variable in a dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots \n",
+    "ax.hist(df[\"col1\"], label=\"Col1\", bins=[150, 160, 170, 180, 190, 200, 210], histtype=\"step\")\n",
+    "ax.hist(df[\"col2\"], label=\"Col2\", bins=[150, 160, 170, 180, 190, 200, 210], histtype=\"step\")\n",
+    "ax.set_xlabel(\"X axis label\")\n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "ax.legend()\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Error Bar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- With single value\n",
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "# Errorbar with bar plot when used with 1  variable\n",
+    "ax.bar(\"Label 1\", df[\"col1\"].mean(), yerr=df[\"col1\"].std())\n",
+    "ax.bar(\"Label 2\", df[\"col2\"].mean(), yerr=df[\"col2\"].std())\n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "plt.show()\n",
+    "```\n",
+    "- With line plot\n",
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "# Errorbar with line plot when used with 2  variables\n",
+    "ax.errorbar(df[\"col1\"], df[\"col2\"], yerr=df[\"col3\"])\n",
+    "ax.errorbar(df[\"col1\"], df[\"col2\"], yerr=df[\"col3\"])\n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.boxplot([df1[\"col\"], df2[\"col\"]])\n",
+    "ax.set_xticklabels([\"DF1\", \"DF2\"])\n",
+    "ax.set_ylabel(\"col\")\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scatter plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plotting with 2 variables\n",
+    "ax.scatter(df1[\"col1\"], df1[\"col2\"], color=\"red\", label=\"df1\")\n",
+    "ax.scatter(df2[\"col1\"], df2[\"col2\"], color=\"blue\", label=\"df2\")\n",
+    "ax.set_xlabel(\"X axis label\")\n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "ax.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Plotting with 3 variables\n",
+    "ax.scatter(df[\"col1\"], df[\"col2\"], c=df.col3) # c represents the third variable\n",
+    "ax.set_xlabel(\"X axis label\")\n",
+    "ax.set_ylabel(\"Y axis label\")\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
