Chapter 4 : Sharing visualizations with others

--- a/Python/Introduction to Data Visualization with Matplotlib/takeaways.ipynb
+++ b/Python/Introduction to Data Visualization with Matplotlib/takeaways.ipynb
@@ -239,7 +239,52 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Change style to ggplot\n",
+    "plt.style.use(\"ggplot\")\n",
+    "# Change style back to default\n",
+    "plt.style.use(\"default\")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save figure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from matplotlib import pyplot as plt\n",
+    "fig, ax = plt.subplots()\n",
+    "# Control figure size or aspect ratio\n",
+    "fig.set_size_inches([width_val, height_val])\n",
+    "# Formats can be saved in lossless .png and vector .svg\n",
+    "fig.savefig(\"fig_name.jpg\", quality=50) # Avoid values above 90\n",
+    "# Control resolution rendering\n",
+    "fig.savefig(\"fig_name.png\", dpi=300)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
