Chapter 2 : Visualizing Two Quantitative Variables

--- a/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
+++ b/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
@@ -63,6 +63,62 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rel Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.relplot(x=\"col1\", y=\"col2\", data=df, kind=\"scatter\",\n",
+    "            size= \"col5\", hue= \"col6\", style= \"col7\", alpha=0.4,\n",
+    "            col=\"col3\", col_wrap=2,  # subgroup into columns, each column containing 2 plots max\n",
+    "            col_order=[\"val1\", \"val2\", \"val3\", \"val4\"]. # Legend order\n",
+    "            row = \"col4\",  # subgroup into rows\n",
+    "            row_order=[\"valx\", \"valy\"]) # Legend order\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Line Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.relplot(x=\"col1\", y=\"col2\", data=df, kind=\"line\", \n",
+    "            ci=None, style=\"col3\", # Show different style for different Subgroups\n",
+    "            markers = True,  # Show marking for each datapoint\n",
+    "            hue=\"col3\",       # Subgroup according to color\n",
+    "            dashes = False)\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
