Chapter 3 : Visualizing a Categorical and a Quantitative Variable

--- a/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
+++ b/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
@@ -119,6 +119,128 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cat plot "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# List of categories from lowest to highest\n",
+    "category_order = [\"A\", \"B\", \"C\", \"D\"]\n",
+    "\n",
+    "sns.catplot(y=\"col1\", data=df,\n",
+    "            kind=\"count\", order=category_order,\n",
+    "            col = \"col2\") # Show different subgroup in each column\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Barplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# List of categories from lowest to highest\n",
+    "category_order = [\"A\", \"B\", \"C\", \"D\"]\n",
+    "\n",
+    "\n",
+    "sns.catplot(x=\"cat_col\", y=\"col\",\n",
+    "            data=df, kind=\"bar\",\n",
+    "            order=category_order, ci=None) # # Turn off the confidence intervals\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.catplot(x=\"cat_col\", y=\"num_col\",\n",
+    "            order=[\"cat A\", \"cat B\"], # Specify order of categories\n",
+    "            data=df, sym=\"\", # Omit outliers\n",
+    "            kind=\"box\", whis = 0.5) # Set the whiskers to 0.5 * IQR or [5,95] for 5th to 95th percentile\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Point plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- shows mean of a variable and 95% confidence interval around the mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from numpy import median\n",
+    "\n",
+    "sns.catplot(x=\"cat_col1\", y=\"num_col\", data=df,\n",
+    "            kind=\"point\", hue=\"cat_col2\", # Subgroup according to other category\n",
+    "            ci = None, join=False, # Stop joining line\n",
+    "            estimator=median) # Use median as point estimation\n",
+    "plt.show()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
