--- a/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
+++ b/Python/Introduction to Data Visualization with Seaborn/takeaways.ipynb
@@ -78,6 +78,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Show the relationship between two quantitative variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -128,6 +135,13 @@
    "metadata": {},
    "source": [
     "### Cat plot "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Show the distribution of a quantitative variable within categories de,ned by a categorical variable"
    ]
   },
   {
@@ -241,7 +255,69 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Change theme or style"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "\n",
+    "custom_palette = ['#FBB4AE', '#B3CDE3', '#CCEBC5','#DECBE4', '#FED9A6']\n",
+    "\n",
+    "sns.set_theme(context='talk', # sns.set_context(\"talk\")\n",
+    "                  style='whitegrid', # sns.set_style(\"whitegrid\")\n",
+    "                  palette='RdBu',  # sns.set_palette(custom_palette)\n",
+    "                  font='sans-serif', \n",
+    "                  font_scale=1, \n",
+    "                  color_codes=True, \n",
+    "                  rc=None)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Customize seaborn plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "g = sns.(yourplot)\n",
+    "\n",
+    "# See what type of plot object it is\n",
+    "print(type(g))\n",
+    "\n",
+    "# if g is FacetGrid object (it has the ability to create subplots)\n",
+    "# Add title to plot\n",
+    "g.fig.suptitle(\"Title\", y=1.03)\n",
+    "# Add title to subplots\n",
+    "g.set_titles(\"This is {col_name}\") # Make sure col attribute is defined in g\n",
+    "\n",
+    "# if g is AxesSubplot object (it has the ability to create single plot)\n",
+    "# Add title to plot\n",
+    "g.set_title(\"Title\", y=1.03)\n",
+    "\n",
+    "# Add axis labels\n",
+    "g.set(xlabel=\"New X Label\", ylabel=\"New Y Label\")\n",
+    "# Rotate axis ticks\n",
+    "plt.xticks(rotation=90)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
