Chapter 3 : Additional Plot Types

--- a/Python/Intermediate Data Visualization with Seaborn/takeaways.ipynb
+++ b/Python/Intermediate Data Visualization with Seaborn/takeaways.ipynb
@@ -103,6 +103,64 @@
     "ax1.legend()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Seaborn stripplot : `sns.stripplot(data=df, y=\"cat_col\", x=\"num_col\", jitter=True)`\n",
+    "- Seaborn swarmplot : `sns.swarmplot(data=df, y=\"cat_col\", x=\"num_col\")`\n",
+    "- Seaborn boxplot : `sns.boxplot(data=df, y=\"cat_col\", x=\"num_col\")`\n",
+    "- Seaborn violin plot : `sns.violinplot(data=df, y=\"cat_col\", x=\"num_col\")`\n",
+    "- Seaborn boxen plot : `sns.boxenplot(data=df, y=\"cat_col\", x=\"num_col\")`\n",
+    "- Seaborn bar plot : `sns.barplot(data=df, y=\"cat_col1\", x=\"num_col\", hue = \"cat_col2\")`\n",
+    "- Seaborn point plot : `sns.pointplot(data=df, y=\"cat_col1\", x=\"num_col\", hue = \"cat_col2\")`\n",
+    "- Seaborn count plot : `sns.countplot(data=df, y=\"cat_col1\", hue = \"cat_col2\")`\n",
+    "- Seaborn reg plot : `sns.regplot(data=df, x=\"col1\", y=\"col2\",marker='+', order=2, x_jitter=0, x_estimator=np.mean, x_bins=4)`\n",
+    "- Seaborn resid plot (useful for evaluating the fit of a model) : `sns.residplot(data=df, y=\"col1\", x = \"col2\", order=2)`\n",
+    "    - An ideal regression model's regplot has randomly distributed uniform data across both side of the line \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Seaborn heatmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# See heatmap\n",
+    "df_crosstab = pd.crosstab(df[\"cat_colx\"], df[\"cat_coly\"],\n",
+    "                values=df[\"num_col\"], aggfunc=\"mean\")\n",
+    "sns.heatmap(df_crosstab, annot=True, fmt=\"d\", cmap=\"YlGnBu\", \n",
+    "                cbar=False, linewidths=.5, center=df_crosstab.loc[9, 6])\n",
+    "# See heatmap of correlation\n",
+    "sns.heatmap(df.corr(), cmap='YlGnBu')\n",
+    "# Rotate tick marks for visibility\n",
+    "plt.yticks(rotation=0)\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.show() #Show the plot\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
