Chapter 4 : Creating Plots on Data Aware Grids

--- a/Python/Intermediate Data Visualization with Seaborn/takeaways.ipynb
+++ b/Python/Intermediate Data Visualization with Seaborn/takeaways.ipynb
@@ -160,7 +160,88 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Faceting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Create a small multiple container object\n",
+    "g = sns.FacetGrid(df, col='cat_col')\n",
+    "\n",
+    "# Example 1 : fill up container with boxplot\n",
+    "g.map(sns.boxplot, 'num_col', order=['1', '2', '3', '4'])\n",
+    "\n",
+    "# Example 2 : fill up container with scatterplot\n",
+    "g.map(plt.scatter, 'x_col', 'y_col')\n",
+    "\n",
+    "# Note : catplot and lmplot provide shortcuts\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pair Grid and Pairplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Pair Grid\n",
+    "g = sns.PairGrid(df, vars=[\"col1\", \"col2\"])\n",
+    "g = g.map_diag(sns.histplot) # Diagonally show histogram\n",
+    "g = g.map_offdiag(sns.scatterplot) # Off-diagonally show scatterplot\n",
+    "\n",
+    "# Alternative and easier approach : Pairplot \n",
+    "sns.pairplot(df, vars=[\"col1\",\"col2\"], kind=\"reg\",\n",
+    "                diag_kind=\"hist\", hue=\"BEDRMS\", \n",
+    "                palette=\"husl\", plot_kws={\"alpha\": 0.5})\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Joint Grid and Jointplot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Joint Grid plot : Advanced customization\n",
+    "g = sns.JointGrid(data=df, x=\"col1\", y=\"col2\")\n",
+    "g = g.plot_joint(sns.kdeplot)\n",
+    "g = g.plot_marginals(sns.kdeplot, shade=True)\n",
+    "g.plot(sns.regplot, sns.histplot) \n",
+    "# Alternative and easier approach: Jointplot\n",
+    "g = sns.jointplot(x=\"col1\", y=\"col2\",\n",
+    "            data=df, kind=\"scatter\",\n",
+    "            xlim=(0, 25000))\n",
+    "g.plot_joint(sns.kdeplot)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
